# openedx-wikilearn-features

./: .coveragerc  .gitignore  .hatch_build.py  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  test_settings.py  tox.ini  webpack.config.js
.github/workflows/: pull-translations.yml  release.yml  upgrade-python-requirements.yml
docs/: Makefile  conf.py  index.rst  make.bat  testing.rst
openedx_wikilearn_features/: __init__.py  apps.py  auth_backend.py  models.py  urls.py
openedx_wikilearn_features/admin_dashboard/: admin.py  apps.py  course_reports.py  grades.py  models.py  runner.py  signals.py  tasks.py  tasks_base.py  urls.py  utils.py
openedx_wikilearn_features/admin_dashboard/admin_task/: api.py  api_helper.py
openedx_wikilearn_features/admin_dashboard/course_versions/: task_helper.py  utils.py
openedx_wikilearn_features/admin_dashboard/migrations/: 0001_initial.py
openedx_wikilearn_features/admin_dashboard/settings/: common.py
openedx_wikilearn_features/admin_dashboard/static/css/: main.css
openedx_wikilearn_features/admin_dashboard/templates/admin_dashboard/: course-reports.html
openedx_wikilearn_features/conf/locale/: config.yaml
openedx_wikilearn_features/email/: message_types.py  utils.py
openedx_wikilearn_features/messenger/: admin.py  apps.py  signals.py  tasks.py  urls.py  views.py
openedx_wikilearn_features/messenger/api/v0/: serializers.py  (+2 more)
openedx_wikilearn_features/messenger/settings/: common.py
openedx_wikilearn_features/messenger/templates/: messenger.html
openedx_wikilearn_features/meta_translations/: __init__.py  admin.py  apps.py  meta_client.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py  wiki_components.py
openedx_wikilearn_features/meta_translations/mapping/: __init__.py  exceptions.py  utils.py
openedx_wikilearn_features/meta_translations/migrations/: 0001_initial.py  0002_coursetranslation.py  0003_auto_20220408_0635.py  0004_auto_20220411_0859.py  0005_wikitranslation_approved.py  0006_courseblockdata_parsed_keys.py  0007_auto_20220520_0808.py  0008_auto_20220520_1117.py  0009_auto_20220608_0908.py  0010_auto_20220616_1545.py  0011_auto_20220621_1416.py  0012_courseblock_deleted.py  0013_auto_20220627_0631.py  0014_courseblock_extra.py  0015_auto_20220721_1230.py  0016_courseblock_translated.py  0017_metacronjobinfo.py  0018_auto_20240124_1024.py
openedx_wikilearn_features/meta_translations/settings/: common.py  production.py
openedx_wikilearn_features/meta_translations/templates/: discover_courses.html  translations.html
openedx_wikilearn_features/meta_translations/transformers/: __init__.py  wiki_transformer.py
openedx_wikilearn_features/wikimedia_general/: __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
openedx_wikilearn_features/wikimedia_general/migrations/: 0001_initial.py
openedx_wikilearn_features/wikimedia_general/settings/: common.py
requirements/: base.in  base.txt  ci.txt  dev.txt  doc.txt  pip-tools.txt  pip.txt  quality.txt  test.txt
tests/: test_models.py
(+143 files in other folders)
