[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "openedx-wikilearn-features"
description = "Wikilearn features for Open edX"
readme = "README.rst"
requires-python = ">=3.11"
license = { text = "AGPL 3.0" }
authors = [
  { name = "Ahmed Khalid", email = "ahmed.khalid@arbisoft.com" },
]
keywords = ["Python", "edx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/wikimedia/openedx-wikilearn-features"

[tool.hatch.version]
path = "openedx_wikilearn_features/__init__.py"

[tool.hatch.build.hooks.custom]
path = ".hatch_build.py"

[tool.isort]
include_trailing_comma = true
indent = "    "
line_length = 120
multi_line_output = 3
skip = ["migrations"]


